--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -60,3 +60,12 @@ h2 {
     }
   }
 }
+
+
+// @media (min-width: 576px) {  }
+
+// @media (min-width: 768px) {  }
+
+// @media (min-width: 992px) {  }
+
+// @media (min-width: 1200px) { }
