--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -6,6 +6,13 @@
   -o-background-size: cover;
   background-size: cover;
 }
+@mixin lineg($direction,$color1,$color2) {
+  background: linear-gradient($direction,$color1,$color2);
+  background: -moz-linear-gradient($direction,$color1,$color2);
+  background: -webkit-linear-gradient($direction,$color1,$color2);
+  background: -o-linear-gradient($direction,$color1,$color2);
+
+}
 @mixin body-font {
   font-family: 'Open Sans', serif;
 }
