--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,29 +1,29 @@
 // Variables
 
-// Restate Bootstrap Variables
+// Colors
 
-$white:    #fff !default;
-$gray-100: #f8f9fa !default;
-$gray-200: #e9ecef !default;
-$gray-300: #dee2e6 !default;
-$gray-400: #ced4da !default;
+$white:    #e7dfdf !default;
+$gray-100: #dbcccc !default;
+$gray-200: #ebd3d3 !default;
+$gray-300: #e2d8d8 !default;
+$gray-400: #bdc1c5 !default;
 $gray-500: #adb5bd !default;
 $gray-600: #868e96 !default;
-$gray-700: #495057 !default;
-$gray-800: #343a40 !default;
-$gray-900: #212529 !default;
-$black:    #000 !default;
+$gray-700: #526475 !default;
+$gray-800: #64686b !default;
+$gray-900: #424242 !default;
+$black:    #3b3a3a !default;
 
-$blue:    #007bff !default;
-$indigo:  #6610f2 !default;
-$purple:  #6f42c1 !default;
-$pink:    #e83e8c !default;
-$red:     #dc3545 !default;
-$orange:  #BD5D38 !default;
-$yellow:  #ffc107 !default;
-$green:   #28a745 !default;
-$teal:    #20c997 !default;
-$cyan:    #17a2b8 !default;
+$blue:    #3a6696 !default;
+$indigo:  #663ca9 !default;
+$purple:  #49366e !default;
+$pink:    #d2a9bc !default;
+$red:     #ea394b !default;
+$orange:  #ff814f !default;
+$yellow:  #ffde7a !default;
+$green:   #56ff7e !default;
+$teal:    #6ed5b6 !default;
+$cyan:    #6acddc !default;
 
 $primary:       $orange !default;
 $secondary:     $gray-600 !default;
